--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -82,7 +82,7 @@
             <ul>
                 <li th:each="player : ${gameRoom.players}">
                     <span th:text="${player.name}"></span>
-                    <button th:attr="data-player-name=${player.name}" onclick="voteLiar(this)">투표</button>
+                    <button th:attr="data-player-name=${player.name}" onclick="voteLiar(this)">확인</button>
                 </li>
             </ul>
         </div>
