나가기 버튼추가

--- a/src/main/resources/templates/Game.html
+++ b/src/main/resources/templates/Game.html
@@ -35,6 +35,13 @@
                 </form>
             </div>
         </div>
+        <div>
+            <button class="brutalist-button" type="submit" onclick="location=`/`">
+                <div class="button-text">
+                    <span>나가기</span>
+                </div>
+            </button>
+        </div>
     </div>
     <div class="score">
         <div class="scoreText" id="scoreT1">Total Score : </div>
